# CottonCandy

./: CMakeLists.txt  LICENSE  ReadMe.md  makefile
example/: example_01.f90  example_02.f90  example_03.f90  example_04.f90  example_05.f90
source/: FourierTransform.f90  Integral.f90  cottoncandy.f90  cottoncandy_consts.f90  cottoncandy_matrix.f90  cottoncandy_ode.f90  main.f90  special_function.f90
